# staraichat

./: .gitignore  Cargo.toml  Cross.toml  build.rs  resource.rc  webview_shell.html
.github/workflows/: build.yml
android/src/cc/ccwu/staraichat/: StarAIChatActivity.java
patches/iced_winit-0.14.0/src/: conversion.rs
src/: android_file_picker.rs  config.rs  latex.rs  lib.rs  main.rs  markdown.rs  media.rs  secrets.rs  storage.rs  types.rs  webview_render.rs
src/models/: agnes.rs  deepseek_v3_0324.rs  gpt4_1.rs  image_generation.rs  llama4_scout.rs  mod.rs  video_generation.rs  xunfei_spark.rs
