[package]
name = "ai_chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["webview"]
webview = ["dep:wry"]

[dependencies]
wry = { version = "0.49", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
futures-util = "0.3"
dirs = "5.0"
anyhow = "1.0"
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
image = { version = "0.25", features = ["png", "jpeg"] }
tui-math = "0.1.1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
regex = "1"
once_cell = "1"
toml = "0.8"
apk = "0.4.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
log = "0.4"
winit = { version = "0.30", features = ["android-native-activity"] }
jni = "0.21"

[package.metadata.android]
application_id = "cc.ccwu.staraichat"
build_targets = [
    "armv7-linux-androideabi",
    "i686-linux-android",
    "aarch64-linux-android",
    "x86_64-linux-android",
]
resources = "res"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 33

[package.metadata.android.signing.release]
path = "android-release.keystore"

[package.metadata.android.application]
label = "StarAIChat"
icon = "@mipmap/ic_launcher"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"

[package.metadata.android.application.activity]
name = "cc.ccwu.staraichat.StarAIChatActivity"
